Perkin-UAT/force-app/main/default/objects/project_request_os__c/project_request_os__c.object-meta.xml
<CustomObject>
    <label>Project Request</label>
    <nameField>
        <label>Project Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>