Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Billing_Address_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Address Confirmed</label>
    <type>Checkbox</type>
</CustomField>