Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Contract_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contract_Comments__c</fullName>
    <description>This 255 character text field stores contract&#39;s Comment.(INC0288127)</description>
    <inlineHelpText>This field stores contract&#39;s Comment.</inlineHelpText>
    <label>Contract Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>