Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>This 100 character text field stores contract information.(INC0288127)</description>
    <inlineHelpText>This field stores contract number information.</inlineHelpText>
    <label>Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>