Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>Use two digit abreviation</inlineHelpText>
    <label>Country</label>
    <length>8</length>
    <type>Text</type>
</CustomField>