Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/fxLengthOfProposedContract__c.field-meta.xml
<CustomField>
    <fullName>fxLengthOfProposedContract__c</fullName>
    <description>This field stores opportunity&#39;s Length Of Proposed Contract.(INC0288127)</description>
    <formula>Opportunity__r.Length_of_Proposed_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field stores opportunity&#39;s Length Of Proposed Contract.</inlineHelpText>
    <label>fxLengthOfProposedContract</label>
    <type>Text</type>
</CustomField>