Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/fxProductLineName__c.field-meta.xml
<CustomField>
    <fullName>fxProductLineName__c</fullName>
    <description>This field stores opportunity&#39;s Product Line Name.(INC0288127)</description>
    <formula>Opportunity__r.fxProductLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field stores opportunity&#39;s Product Line Name.</inlineHelpText>
    <label>fxProductLineName</label>
    <type>Text</type>
</CustomField>