Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/INF_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>INF_Opp_Owner__c</fullName>
    <formula>Opportunity__r.Owner.FirstName+&#39; &#39;+Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Owner</label>
    <type>Text</type>
</CustomField>