Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/INF_Opp_Owner_email__c.field-meta.xml
<CustomField>
    <fullName>INF_Opp_Owner_email__c</fullName>
    <label>Opp Owner email</label>
    <type>Email</type>
</CustomField>