Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Invoice_Timing__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Timing__c</fullName>
    <label>Invoice Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
                <default>true</default>
                <label>Upfront</label>
            </value>
            <value>
                <fullName>In Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>