Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Length_of_Project_Months__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Project_Months__c</fullName>
    <inlineHelpText>Length must coincide with duration of PO.  If PO&#39;s issued annually, Length is 12 months</inlineHelpText>
    <label>Length of Project (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>