Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/New_Location__c.field-meta.xml
<CustomField>
    <fullName>New_Location__c</fullName>
    <label>New Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>