Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <description>Add reason why status changed to Needs Information</description>
    <label>Project Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>