Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Original_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Project_ID__c</fullName>
    <inlineHelpText>If expansion, add original CRM Project ID</inlineHelpText>
    <label>Original Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>