Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Project_End__c.field-meta.xml
<CustomField>
    <fullName>Project_End__c</fullName>
    <label>Project End</label>
    <type>Date</type>
</CustomField>