Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Project_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Project_Expansion__c</fullName>
    <description>Yes if this is adding onto existing project, No if new project</description>
    <inlineHelpText>Yes if this is adding onto existing project, No if new project</inlineHelpText>
    <label>Project Expansion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>