Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Services_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Services_Location_City__c</fullName>
    <label>Services Location:  City</label>
    <type>TextArea</type>
</CustomField>