Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Services_Location_Street__c.field-meta.xml
<CustomField>
    <fullName>Services_Location_Street__c</fullName>
    <label>Services Location: Street</label>
    <type>TextArea</type>
</CustomField>