Perkin-UAT/force-app/main/default/objects/project_request_os__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <type>TextArea</type>
</CustomField>